--- a/docs/blog/2021-03-27_2020 Recap.md
+++ b/docs/blog/2021-03-27_2020 Recap.md
@@ -1,7 +1,7 @@
 ---
 title: A Late Recap of 2020 Events
 date: 3-27-2021
-tags: ['stateofthetimes,', 'sports,', 'race', 'blacks', 'asians', 'potus']
+tags: ['stateofthetimes', 'sports,', 'race', 'blacks', 'asians', 'potus']
 author: NCT
 blog: true
 sidebar: auto
